# llvm_study

./: README.md
llvm-core-lib/: README.md
llvm-core-lib/chapter-05/exam-00/: Makefile  cmd  exam0.cpp  sum-cmd  sum-ssa.bc  sum-ssa.ll  sum.bc  sum.ll
llvm_cook_book/: README.md
llvm_cook_book/chap1/: multiply.back.ll  multiply.bc  multiply.c  multiply.ll  multiply.s  multiply1.ll  output.bc  test1.bc  test1.c  test1.ll  test2.bc  test2.c  test2.ll  testfile.ll  xxx
llvm_cook_book/chap2_3/: Makefile  language_def.txt  toy.cpp
llvm_cook_book/chap2_3/progs/: exam00.d  exam01.d  exam02.d  exam03.d  exam04.d  exam05.d
llvm_cook_book/chap4/00_FunCount/: CMakeLists.txt  FunCount.cpp  build_run.sh  exam_00.c  exam_00.ll
llvm_cook_book/chap4/01_InstCount/: CMakeLists.txt  InstCount.cpp  build_run.sh  exam_00.bc  exam_00.c
llvm_cook_book/chap4/02_AliasAnalysis/: AliasAnalysis.cpp  CMakeLists.txt
